--- a/src/main/resources/templates/thyme/crowdFundingRegistration.html
+++ b/src/main/resources/templates/thyme/crowdFundingRegistration.html
@@ -22,7 +22,7 @@
 	      <p>등록 요청이 완료되었습니다.</p>
 	    </div>
 	    <div class="col">
-	    	<a href="" th:href="@{/myAccount}" class="btn btn-primary">마이페이지로 가기</a><br><br>
+	    	<a href="" th:href="@{/mypage}" class="btn btn-primary">마이페이지로 가기</a><br><br>
 	    </div>
 	    <hr>
 	  </div>
