--- a/src/main/resources/templates/thyme/PersonalDealItemView.html
+++ b/src/main/resources/templates/thyme/PersonalDealItemView.html
@@ -6,34 +6,35 @@
 <title>중고물품 정보 화면</title>
 </head>
 <body>
+<header th:include="fragment/header :: headerFragment"></header>
+
 <br><h1 align="center">중고물품 상세정보 화면</h1><br>
 <div class="container">
   <div class="row">
   	<hr>
-    <h1><span th:text="${personalDealItem.item.title}"> - </span><span th:text="${personalDealItem.title}"></span></h1>
+    <h1><span th:text="${personalDealItem.item.title}"> -<span th:text="${personalDealItem.title}"></span></h1>
   </div>	
-  <div align="center">
+  <div class="row">
     <div class="col">
-     <!--<p rowspan="7"><img th:src="${personalDealItem.item.img}"/></p>-->
+      <img th:src="@{'/upload/' + ${personalDealItem.item.img}}" alt="대표 사진" width="600" height="400" />
     </div>
     <div class="col">
       <p>설명: <span th:text="${personalDealItem.item.description}"></span></p>
       <p>카테고리: <span th:text="${parentCatId} + '>' + ${childCatId}"></span></p>
       <p><b>판매희망가: <span th:text="${personalDealItem.price}+'원'"></span></b><br><br></p>
       <p>거래진행 상태: <span th:text="${personalDealItem.dealStatus}"></span></p>
-      <p>상품 상태: <span th:text="${personalDealItem.productStatus}"></span></p>
       <p>배송비: <span th:text="${personalDealItem.item.shippingFee}+'원'"></span></p>
       <p>판매자 아이디: <span th:text="${personalDealItem.item.userId}"></span></p>
       <p>거래지역: <span th:text="${personalDealItem.location}"></span></p>
       <p>조회수: <span th:text="${personalDealItem.item.views}"></span></p>
-      
-      <form action="#" th:action="@{/personalDeal/order/{personalDealId}(personalDealId=${personalDealItem.personalDealId})}" method="get">
+            
+      <form action="" th:action="@{/personalDeal/order/{personalDealId}(personalDealId=${personalDealItem.personalDealId})}" method="get">
       	<input type="submit"  class="btn btn-primary btn-lg" value="구매하기" >
       </form>
+      <a href="#" th:href="@{/personalDeal/newest}">중고물품 목록</a>&nbsp;
+      <a href="#" th:href="@{/personalDeal/addItemToCart.do(personalDealId=${personalDealItem.personalDealId}, itemId=${personalDealItem.itemId}, img=${personalDealItem.item.img})}">장바구니 넣기</a>&nbsp;
     </div>
-    <a href="#" th:href="@{/personalDeal/newest}">중고물품 목록</a>&nbsp;
-    <a href="#" th:href="@{/personalDeal/addItemToCart.do(personalDealId=${personalDealItem.personalDealId}, itemId=${personalDealItem.itemId}, img=${personalDealItem.item.img})}">장바구니 넣기</a>&nbsp;
-  </div>
 </div>
+<footer th:include="fragment/footer :: footerFragment"></footer>
 </body>
 </html>
