--- a/src/main/resources/templates/thyme/Home.html
+++ b/src/main/resources/templates/thyme/Home.html
@@ -19,8 +19,8 @@
 		<div th:each="personalDealItem : ${personalDealItems}">
 			<table>
 				<tr>
-					<!--<td rowspan="4"><img th:src="@{'/upload/' + ${personalDealItem.img}}" width="130" height="100"/></td>-->
-					<td>
+					<td rowspan="4"> <img th:src="@{'/upload/' + ${personalDealItem.img}}" width="130" height="100"/></td>
+					<td>			
 						<a th:text="${personalDealItem.title}" th:href="@{/personalDeal/{personalDealId}(personalDealId=${personalDealItem.personalDealId})}"></a>
 					</td>
 				</tr>
